force-app/main/default/objects/StudentSubjectChoices__c/StudentSubjectChoices__c.object-meta.xml
<CustomObject>
    <label>StudentSubjectChoices</label>
    <nameField>
        <displayFormat>d-{0000}</displayFormat>
        <label>StudentSubjectChoices Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>StudentSubjectChoicess</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>