force-app/main/default/objects/StudentSubjectChoices__c/fields/student__c.field-meta.xml
<CustomField>
    <fullName>student__c</fullName>
    <label>student</label>
    <referenceTo>student__c</referenceTo>
    <relationshipLabel>StudentSubjectChoicess</relationshipLabel>
    <relationshipName>StudentSubjectChoicess</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>