force-app/main/default/objects/StudentSubjectChoices__c/fields/SUBJECT__c.field-meta.xml
<CustomField>
    <fullName>SUBJECT__c</fullName>
    <label>SUBJECT</label>
    <referenceTo>SUBJECT__c</referenceTo>
    <relationshipLabel>StudentSubjectChoicess</relationshipLabel>
    <relationshipName>StudentSubjectChoicess</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>